[project]
name = "fastapi-cors-custommiddleware"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi[uvicorn]>=0.115.10",
    "httpx>=0.28.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_cors_custommiddleware"]
